subo mis cambios

--- a/day1/linear_systems.ipynb
+++ b/day1/linear_systems.ipynb
@@ -180,6 +180,77 @@
     "\n",
     "We can see that the rows of the matrix correspond to the coefficients in the equations (row view)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Gaussian Elimination\n",
+       "\n",
+       "\n",
+       "## Algorithm (from http://www.math-cs.gordon.edu/courses/ma342/handouts/gauss.pdf)\n",
+       "\n",
+       "Following the pseudocode available at the above link, we are going to break our algorithm into three parts:\n",
+       "\n",
+       "1. Gaussian Elimination\n",
+       "2. Forward Elimination\n",
+       "3. Backward Solve\n",
+       "\n",
+       "### Gaussian Elimination\n",
+       "\n",
+       "The gist of this step is to transform our matrix to an upper triangular matrix by finding **pivots**, using the pivots to determine multiplicative factors\n",
+       "\n",
+       "![Gaussian Elimination Pseudocode](./gaussian_elimination.jpg)\n",
+       "\n",
+       "**Note:** this pseudocode assumes indexing starts at one. We will need to modify this for Python which starts at zero.\n",
+       "\n",
+       "For the $k^{th}$ row we identify the $k^{th}$ column; this is the **pivot**. For each row $i; i > k$, we find the multiplier ($f_{ki}$) such that when we multiply row $k$ by\n",
+       "\n",
+       "![forward_elimination](./forward_elimination.png)\n",
+       "\n",
+       "## Backward Substitution\n",
+       "![backward substitution](./backward_solve.png)\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%markdown\n",
+    "# Gaussian Elimination\n",
+    "\n",
+    "\n",
+    "## Algorithm (from http://www.math-cs.gordon.edu/courses/ma342/handouts/gauss.pdf)\n",
+    "\n",
+    "Following the pseudocode available at the above link, we are going to break our algorithm into three parts:\n",
+    "\n",
+    "1. Gaussian Elimination\n",
+    "2. Forward Elimination\n",
+    "3. Backward Solve\n",
+    "\n",
+    "### Gaussian Elimination\n",
+    "\n",
+    "The gist of this step is to transform our matrix to an upper triangular matrix by finding **pivots**, using the pivots to determine multiplicative factors\n",
+    "\n",
+    "![Gaussian Elimination Pseudocode](./gaussian_elimination.jpg)\n",
+    "\n",
+    "**Note:** this pseudocode assumes indexing starts at one. We will need to modify this for Python which starts at zero.\n",
+    "\n",
+    "For the $k^{th}$ row we identify the $k^{th}$ column; this is the **pivot**. For each row $i; i > k$, we find the multiplier ($f_{ki}$) such that when we multiply row $k$ by\n",
+    "\n",
+    "![forward_elimination](./forward_elimination.png)\n",
+    "\n",
+    "## Backward Substitution\n",
+    "![backward substitution](./backward_solve.png)\n"
+   ]
   }
  ],
  "metadata": {
@@ -198,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
