--- a/day2/patient_similarity.ipynb
+++ b/day2/patient_similarity.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from myla.becvector import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter MySQL passwd for jovyan ······\n"
+     ]
+    }
+   ],
    "source": [
     "conn = pymysql.connect(host=\"mysql\",\n",
     "                       port=3306,user=\"jovyan\",\n",
@@ -42,18 +61,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>hadm_id</th>\n",
+       "      <th>sequence</th>\n",
+       "      <th>code</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766</td>\n",
+       "      <td>1</td>\n",
+       "      <td>198.3</td>\n",
+       "      <td>SECONDARY MALIGNANT NEOPLASM OF BRAIN AND SPIN...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766</td>\n",
+       "      <td>2</td>\n",
+       "      <td>162.8</td>\n",
+       "      <td>MALIGNANT NEOPLASM OF OTHER PARTS OF BRONCHUS ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766</td>\n",
+       "      <td>3</td>\n",
+       "      <td>531.40</td>\n",
+       "      <td>CHRONIC OR UNSPECIFIED GASTRIC ULCER WITH HEMO...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766</td>\n",
+       "      <td>4</td>\n",
+       "      <td>276.1</td>\n",
+       "      <td>HYPOSMOLALITY AND/OR HYPONATREMIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766</td>\n",
+       "      <td>5</td>\n",
+       "      <td>428.0</td>\n",
+       "      <td>CONGESTIVE HEART FAILURE UNSPECIFIED</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   subject_id  hadm_id  sequence    code  \\\n",
+       "0          56    28766         1   198.3   \n",
+       "1          56    28766         2   162.8   \n",
+       "2          56    28766         3  531.40   \n",
+       "3          56    28766         4   276.1   \n",
+       "4          56    28766         5   428.0   \n",
+       "\n",
+       "                                         description  \n",
+       "0  SECONDARY MALIGNANT NEOPLASM OF BRAIN AND SPIN...  \n",
+       "1  MALIGNANT NEOPLASM OF OTHER PARTS OF BRONCHUS ...  \n",
+       "2  CHRONIC OR UNSPECIFIED GASTRIC ULCER WITH HEMO...  \n",
+       "3                  HYPOSMOLALITY AND/OR HYPONATREMIA  \n",
+       "4               CONGESTIVE HEART FAILURE UNSPECIFIED  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.read_sql('SELECT * from icd9',conn).head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>code</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>198.3</td>\n",
+       "      <td>SECONDARY MALIGNANT NEOPLASM OF BRAIN AND SPIN...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56</td>\n",
+       "      <td>162.8</td>\n",
+       "      <td>MALIGNANT NEOPLASM OF OTHER PARTS OF BRONCHUS ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>56</td>\n",
+       "      <td>531.40</td>\n",
+       "      <td>CHRONIC OR UNSPECIFIED GASTRIC ULCER WITH HEMO...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>276.1</td>\n",
+       "      <td>HYPOSMOLALITY AND/OR HYPONATREMIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56</td>\n",
+       "      <td>428.0</td>\n",
+       "      <td>CONGESTIVE HEART FAILURE UNSPECIFIED</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   subject_id    code                                        description\n",
+       "0          56   198.3  SECONDARY MALIGNANT NEOPLASM OF BRAIN AND SPIN...\n",
+       "1          56   162.8  MALIGNANT NEOPLASM OF OTHER PARTS OF BRONCHUS ...\n",
+       "2          56  531.40  CHRONIC OR UNSPECIFIED GASTRIC ULCER WITH HEMO...\n",
+       "3          56   276.1                  HYPOSMOLALITY AND/OR HYPONATREMIA\n",
+       "4          56   428.0               CONGESTIVE HEART FAILURE UNSPECIFIED"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "icd9_codes = pd.read_sql('SELECT subject_id, code, description from icd9',conn)\n",
     "icd9_codes.head()"
@@ -72,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2719"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "code_map = dict(zip(icd9_codes.code, icd9_codes.description))\n",
     "len(code_map)"
@@ -101,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +383,27 @@
     "    computes the cosine similarity between two vectors v1 and v2\n",
     "    Requires a dot product function and a norm function\n",
     "    \"\"\"\n",
-    "    pass"
+    "    return dot(v1,v2) / (norm(v1)*norm(v2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_sim([1,0,1],[0,1,0])"
    ]
   },
   {
@@ -197,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
