--- a/day2/Untitled.ipynb
+++ b/day2/Untitled.ipynb
@@ -36,10 +36,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import myla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dot(v1, v2):\n",
+    "    result = 0\n",
+    "    for index in set (v1.keys()).intersection(v2.keys()):\n",
+    "        result +=v1[index]*v2[index]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dot({1:1,2:2,3:3}, {3:3,4:4,5:5})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def v_plus_v(v1,v2):\n",
+    "    result = {}\n",
+    "    for index in set(v1.keys()).union(v2.keys()):\n",
+    "        result[index] = v1.get(index,0) + v2.get(index,0)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1, 2: 2, 3: 6, 4: 4, 5: 5}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v_plus_v({1:1,2:2,3:3}, {3:3,4:4,5:5})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def alpha_x_v(alpha,v):\n",
+    "    result = {}\n",
+    "    for index in v:\n",
+    "        result[index] = v[index] * alpha\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 3, 2: 6, 3: 9}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_x_v(3,{1:1,2:2,3:3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class set in module builtins:\n",
+      "\n",
+      "class set(object)\n",
+      " |  set() -> new empty set object\n",
+      " |  set(iterable) -> new set object\n",
+      " |  \n",
+      " |  Build an unordered collection of unique elements.\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __and__(self, value, /)\n",
+      " |      Return self&value.\n",
+      " |  \n",
+      " |  __contains__(...)\n",
+      " |      x.__contains__(y) <==> y in x.\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __iand__(self, value, /)\n",
+      " |      Return self&=value.\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __ior__(self, value, /)\n",
+      " |      Return self|=value.\n",
+      " |  \n",
+      " |  __isub__(self, value, /)\n",
+      " |      Return self-=value.\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __ixor__(self, value, /)\n",
+      " |      Return self^=value.\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __or__(self, value, /)\n",
+      " |      Return self|value.\n",
+      " |  \n",
+      " |  __rand__(self, value, /)\n",
+      " |      Return value&self.\n",
+      " |  \n",
+      " |  __reduce__(...)\n",
+      " |      Return state information for pickling.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __ror__(self, value, /)\n",
+      " |      Return value|self.\n",
+      " |  \n",
+      " |  __rsub__(self, value, /)\n",
+      " |      Return value-self.\n",
+      " |  \n",
+      " |  __rxor__(self, value, /)\n",
+      " |      Return value^self.\n",
+      " |  \n",
+      " |  __sizeof__(...)\n",
+      " |      S.__sizeof__() -> size of S in memory, in bytes\n",
+      " |  \n",
+      " |  __sub__(self, value, /)\n",
+      " |      Return self-value.\n",
+      " |  \n",
+      " |  __xor__(self, value, /)\n",
+      " |      Return self^value.\n",
+      " |  \n",
+      " |  add(...)\n",
+      " |      Add an element to a set.\n",
+      " |      \n",
+      " |      This has no effect if the element is already present.\n",
+      " |  \n",
+      " |  clear(...)\n",
+      " |      Remove all elements from this set.\n",
+      " |  \n",
+      " |  copy(...)\n",
+      " |      Return a shallow copy of a set.\n",
+      " |  \n",
+      " |  difference(...)\n",
+      " |      Return the difference of two or more sets as a new set.\n",
+      " |      \n",
+      " |      (i.e. all elements that are in this set but not the others.)\n",
+      " |  \n",
+      " |  difference_update(...)\n",
+      " |      Remove all elements of another set from this set.\n",
+      " |  \n",
+      " |  discard(...)\n",
+      " |      Remove an element from a set if it is a member.\n",
+      " |      \n",
+      " |      If the element is not a member, do nothing.\n",
+      " |  \n",
+      " |  intersection(...)\n",
+      " |      Return the intersection of two sets as a new set.\n",
+      " |      \n",
+      " |      (i.e. all elements that are in both sets.)\n",
+      " |  \n",
+      " |  intersection_update(...)\n",
+      " |      Update a set with the intersection of itself and another.\n",
+      " |  \n",
+      " |  isdisjoint(...)\n",
+      " |      Return True if two sets have a null intersection.\n",
+      " |  \n",
+      " |  issubset(...)\n",
+      " |      Report whether another set contains this set.\n",
+      " |  \n",
+      " |  issuperset(...)\n",
+      " |      Report whether this set contains another set.\n",
+      " |  \n",
+      " |  pop(...)\n",
+      " |      Remove and return an arbitrary set element.\n",
+      " |      Raises KeyError if the set is empty.\n",
+      " |  \n",
+      " |  remove(...)\n",
+      " |      Remove an element from a set; it must be a member.\n",
+      " |      \n",
+      " |      If the element is not a member, raise a KeyError.\n",
+      " |  \n",
+      " |  symmetric_difference(...)\n",
+      " |      Return the symmetric difference of two sets as a new set.\n",
+      " |      \n",
+      " |      (i.e. all elements that are in exactly one of the sets.)\n",
+      " |  \n",
+      " |  symmetric_difference_update(...)\n",
+      " |      Update a set with the symmetric difference of itself and another.\n",
+      " |  \n",
+      " |  union(...)\n",
+      " |      Return the union of sets as a new set.\n",
+      " |      \n",
+      " |      (i.e. all elements that are in either set.)\n",
+      " |  \n",
+      " |  update(...)\n",
+      " |      Update a set with the union of itself and others.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __hash__ = None\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 4, 6}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set({1,1,2,2,4,6})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 9, 2: 8, 3: 7}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = zip([1,2,3],[9,8,7])\n",
+    "a = dict(a)\n",
+    "a"
+   ]
   }
  ],
  "metadata": {
